--- a/index.html
+++ b/index.html
@@ -8,9 +8,18 @@
     <title>Florent LABROUSSE-LHUISSIER – Accueil</title>
     <link rel="stylesheet" href="style.css">
     <link href="https://fonts.googleapis.com/css2?family=Lato:wght@400;600&display=swap" rel="stylesheet">
+    <script>
+        // Appliquer automatiquement le thème du système
+        (function() {
+            const theme = window.matchMedia('(prefers-color-scheme: dark)').matches ? 'dark' : 'light';
+            document.documentElement.setAttribute('data-theme', theme);
+        })();
+    </script>
 </head>
 
 <body>
+    <canvas id="particle-canvas"></canvas>
+    <div class="page-transition-overlay"></div>
     <header>
         <nav>
             <ul>
@@ -64,6 +73,8 @@
     <footer>
         <p>&copy; 2025 Florent LABROUSSE-LHUISSIER <br>Tous droits réservés</p>
     </footer>
+
+    <script src="script.js"></script>
 </body>
 
 </html>
