--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
                     </p>
                 </div>
 
-                <h2 class="section-title">Outils maitrisé</h2>
+                <h2 class="section-title">Outils maîtrisés</h2>
 
                 <div class="skills-carousel">
                     <div class="skills-track">
@@ -142,16 +142,16 @@
                             <span>Docker</span>
                         </div>
                         <div class="skill-item">
-                            <img src="img/logo/logo vmware.svg" alt="vmware">
-                            <span>vmware</span>
+                            <img src="img/logo/logo vmware.svg" alt="VMware">
+                            <span>VMware</span>
                         </div>
                         <div class="skill-item">
-                            <img src="img/logo/logo mysql.png" alt="mysql">
-                            <span>mysql</span>
+                            <img src="img/logo/logo mysql.png" alt="MySQL">
+                            <span>MySQL</span>
                         </div>
                         <div class="skill-item">
-                            <img src="img/logo/logo oracle.png" alt="oracle">
-                            <span>Oracle database<br>PL/SQL</span>
+                            <img src="img/logo/logo oracle.png" alt="Oracle">
+                            <span>Oracle Database<br>PL/SQL</span>
                         </div>
                     </div>
                 </div>
